--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,13 +33,15 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  padding: 20px 0 0 0;
+  text-align: right;
 }
 
 .past {
@@ -63,9 +65,30 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  padding: 30px;
 }
 
-.saveBtn i:hover {
+.saveBtn:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+  color: black;
+}
+
+.appts p {
+  padding: 20px 0 0 10px;
+}
+
+.appts textarea {
+  margin: 10px 0 0 0;
+}
+
+.appts:hover {
+  font-size: 30px;
+  transition: all .3s ease-in-out;
+  color: black;
+}
+
+.appts {
+  border-left: 5px solid rgba(150, 150, 150, .3);
+  border-right: 5px solid rgba(150, 150, 150, .3);
 }
